Fixed background issues on mobile

--- a/app/styles/_modules/_hero.scss
+++ b/app/styles/_modules/_hero.scss
@@ -4,15 +4,6 @@
 	$hero-background-color: rgba($black, 0.3);
 	$hero-background-color-overlay: rgba($amber, 0.7);
 
-	background: {
-		attachment: fixed;
-		color: $hero-background-color;
-		image: url('../../images/edyn-web-hero-top-blurred.jpg');
-		position: 50% 50%;
-		repeat: no-repeat;
-		size: cover;
-		blend-mode: darken
-	}
 	color: $hero-font-color;
 	position: relative;
 	text-align: center;
@@ -21,12 +12,23 @@
 
 	@include media($bp-medium) {
 		padding-top: 35%;
+
+		background: {
+			attachment: fixed;
+			color: $hero-background-color;
+			image: url('../../images/edyn-web-hero-top-blurred.jpg');
+			position: 50% 50%;
+			repeat: no-repeat;
+			size: cover;
+			blend-mode: darken
+		}
 	}
 
 	&-background {
 		display: block;
 		z-index: -1;
-		@include position(absolute, 0 0 0 0);
+		@include position(fixed, 0 0 0 0);
+
 		background: {
 			attachment: fixed;
 			color: $hero-background-color;
@@ -39,6 +41,32 @@
 		width: 100%;
 	  	height: 100%;
 	  	min-height: 100vh;
+	  	//@include transition(all 2.0s);
+
+	  	&::after {
+	  		opacity: 0;
+	  		content: '';
+	  		display: block;
+	  		@include position(absolute, 0 0 0 0);
+	  		@include size(100%);
+	  		z-index: -999;
+	  		background: {
+				attachment: fixed;
+				color: $hero-background-color;
+				image: url('../../images/edyn-web-hero-top-blurred.jpg');
+				position: 50% 50%;
+				repeat: no-repeat;
+				size: cover;
+				blend-mode: darken
+			}
+			@include transition(opacity 0.1s);
+	  	}
+
+	  	&.blurred {
+	  		&::after {
+	  			opacity: 1;
+	  		}
+	  	}
 	}
 
 	&-content {
@@ -140,7 +168,7 @@
 
 		.carousel {
 			@include media($bp-medium) {
-				padding-top: 10vh;
+				padding-top: 10%;
 			}
 		}
 
